--- a/workspace/Dockerfile-71
+++ b/workspace/Dockerfile-71
@@ -71,6 +71,17 @@ RUN if [ ${INSTALL_SOAP} = true ]; then \
   apt-get -y install libxml2-dev php7.1-soap \
 ;fi
 
+#
+#--------------------------------------------------------------------------
+# mysql-client
+#--------------------------------------------------------------------------
+#
+
+USER root
+
+RUN apt update && \
+    apt install -y mysql-client
+
 #####################################
 # LDAP:
 #####################################
