--- a/php-fpm/xdebug.ini
+++ b/php-fpm/xdebug.ini
@@ -1,6 +1,6 @@
 ; NOTE: The actual debug.so extention is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
 
-; xdebug.remote_host=dockerhost
+xdebug.remote_host=dockerhost
 xdebug.remote_connect_back=0
 xdebug.remote_port=9000
 xdebug.idekey=PHPSTORM
@@ -13,6 +13,7 @@ xdebug.profiler_output_dir="~/xdebug/phpstorm/tmp/profiling"
 
 xdebug.remote_handler=dbgp
 xdebug.remote_mode=req
+xdebug.remote_log=/tmp/xdebug.log
 
 xdebug.var_display_max_children=-1
 xdebug.var_display_max_data=-1
