--- a/workspace/xdebug.ini
+++ b/workspace/xdebug.ini
@@ -1,5 +1,7 @@
 ; NOTE: The actual debug.so extention is NOT SET HERE but rather (/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini)
 
+; if you use MacOS, replace "xdebug.remote_host=dockerhost" with "docker.for.mac.localhost"
+
 xdebug.remote_host=dockerhost
 xdebug.remote_connect_back=0
 xdebug.remote_port=9000
