--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -13,7 +13,7 @@
 #
 
 ARG LARADOCK_PHP_VERSION
-FROM laradock/workspace:2.6.1-${LARADOCK_PHP_VERSION}
+FROM laradock/workspace:latest-${LARADOCK_PHP_VERSION}
 
 LABEL maintainer="Mahmoud Zalt <mahmoud@zalt.me>"
 
