--- a/php-worker/supervisord.conf
+++ b/php-worker/supervisord.conf
@@ -1,8 +1,7 @@
 [supervisord]
 nodaemon=true
+loglevel=error
 [supervisorctl]
-[inet_http_server]
-port = 127.0.0.1:9001
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
