--- a/nginx/sites/24slides.conf
+++ b/nginx/sites/24slides.conf
@@ -3,12 +3,33 @@ server {
     listen 80;
     listen [::]:80;
 
+    # For https
+    listen 443 ssl;
+    listen [::]:443 ssl ipv6only=on;
+    ssl_certificate /etc/nginx/ssl/default.crt;
+    ssl_certificate_key /etc/nginx/ssl/default.key;
+
     server_name 24slides.local;
     root /var/www/24slides/public;
     index index.php index.html index.htm;
 
     location / {
          try_files $uri $uri/ /index.php$is_args$args;
+    }
+
+    location ~ ^/(app|apps)/ {
+        proxy_pass             http://php-worker:6001;
+        proxy_set_header Host  $host;
+        proxy_read_timeout     60;
+        proxy_connect_timeout  60;
+        proxy_redirect         off;
+
+        # Allow the use of websockets
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'Upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
     location ~ \.php$ {
